--- a/01create-generator/generator-vue-heiliuer/package.json
+++ b/01create-generator/generator-vue-heiliuer/package.json
@@ -2,6 +2,7 @@
   "name": "generator-vue-heiliuer",
   "version": "0.0.1",
   "dependencies": {
+    "gulp-beautify": "^2.0.1",
     "yeoman-generator": "^1.1.1"
   },
   "files": [
